[gd_scene load_steps=8 format=3 uid="uid://dcar7v8t0vnqs"]

[ext_resource type="Script" uid="uid://dwoow1speib8l" path="res://fork.gd" id="1_3d288"]
[ext_resource type="StyleBox" uid="uid://drailr3ckjt3b" path="res://question.tres" id="2_vbx0n"]
[ext_resource type="StyleBox" uid="uid://8yg8ac4x80mq" path="res://questionPressed.tres" id="3_usoju"]

[sub_resource type="LabelSettings" id="LabelSettings_vbx0n"]
font_size = 60

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_usoju"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_al7w5"]

[sub_resource type="LabelSettings" id="LabelSettings_usoju"]
font_size = 21

[node name="Fork" type="Node2D"]
script = ExtResource("1_3d288")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -485.0
offset_right = 319.0
offset_bottom = 585.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 400

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 70
theme_override_constants/v_separation = 120

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Choose next category"
label_settings = SubResource("LabelSettings_vbx0n")

[node name="CatOpt1" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_usoju")
theme_override_styles/hover = ExtResource("2_vbx0n")
theme_override_styles/pressed = ExtResource("3_usoju")
theme_override_styles/normal = ExtResource("2_vbx0n")
text = "Category1"

[node name="CatOpt2" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_al7w5")
theme_override_styles/hover = ExtResource("2_vbx0n")
theme_override_styles/pressed = ExtResource("3_usoju")
theme_override_styles/normal = ExtResource("2_vbx0n")
text = "Category2"

[node name="CurrentCat" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "		             "
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 23.0
offset_top = 20.0
offset_right = 260.0
offset_bottom = 83.0
text = "Progress"
label_settings = SubResource("LabelSettings_usoju")
autowrap_mode = 2
